# rust-bevy-template

./: Cargo.toml  README.md
nix/modules/: devshell.nix  rust.nix  template.nix
src/: main.rs
